--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Exo 2', sans-serif;
 }
 h1{
     font-size: 60px;
@@ -28,9 +28,11 @@ a{
     color: #fff;
     font-size: 15px;
     text-decoration: none;
+ 
     padding: 10px 15px;
     background-image: linear-gradient(to right,#FB964B, #FE4C2F);
     border-radius: 20px;
+    
 }
 .about-me{
     margin-top: 40px;
@@ -61,7 +63,15 @@ a{
     
     text-align: center;
 }
+.service{
+    margin: auto;
+}
+.service-div{
+    display: flex;
+    
+}
 .service-div img{
+    margin-top: 15px;
     width: 300px;
 }
 .service-div h1{
@@ -70,8 +80,43 @@ a{
 }
 .service-div p{
     text-align: justify;
+    padding: 15px;
 }
 .service-content{
-   width: 350px;
-   box-shadow: 0px 0px 14px -5px #000;
+margin: 50px;
+   width: 330px;
+   box-shadow: 1px 5px 20px rgb(35 40 65 / 13%);
+   border-radius: 15px;
+}
+.counter{
+    margin-top: 100px;
+    margin-bottom: 100px;
+}
+.counter-div{
+    display: flex;
+    margin: auto;
+    box-shadow: 1px 5px 20px rgb(35 40 65 / 13%);
+    border-radius: 15px;
+    width: 80%;
+    
+}
+.count-content{
+    text-align: center;
+    width: 30%;
+    padding: 20px;
+}
+.count-content h2{
+    font-size: 40px;
+    font-weight: 700;
+}
+footer{
+    
+    text-align: center;
+    color: #fff;
+    padding: 30px;
+    background-color: #262626;
+    margin: 0 auto;
+}
+footer h1{
+    font-size: 40px;
 }
